--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     
     <!-- Social Media -->
     <meta property="og:title" content="Turboner"/>
-    <meta property="og:url" content="https://www.turboner.wtf" />
-    <meta property="og:image" content="https://www.turboner.wtf/img/social.png" />
+    <meta property="og:url" content="https://turboner.wtf" />
+    <meta property="og:image" content="https://turboner.wtf/img/social.png" />
 
     <meta name="title" content="$TRBNR">
     <meta name="description" content="VERY FIRST AI memecoin @beeple">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.turboner.wtf/">
+    <meta property="og:url" content="https://turboner.wtf/">
     <meta property="og:title" content="$TRBNR">
     <meta property="og:description" content="VERY FIRST AI memecoin @beeple">
-    <meta property="og:image" content="https://www.turboner.wtf/img/preview.png">
+    <meta property="og:image" content="https://turboner.wtf/img/preview.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.turboner.wtf/">
+    <meta property="twitter:url" content="https://turboner.wtf/">
     <meta property="twitter:title" content="$TRBNR">
     <meta property="twitter:description" content="VERY FIRST AI memecoin @beeple">
-    <meta property="twitter:image" content="https://www.turboner.wtf/img/preview.png">
+    <meta property="twitter:image" content="https://turboner.wtf/img/preview.png">
     <meta name="theme-color" content="#FFF"/>
 </head>
 <body>
@@ -44,6 +44,9 @@
     <div class="heading">
         <h1>TURBONER<sup>TM</sup></h1>
         <p>Smart Contract: <a href="https://etherscan.io/address/0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank">0x184da821bd956cafc598dcb4fa9b8e040c45ada1</a></p>
+    </div>
+    <div class="twitter">
+        <a href="https://twitter.com/beeple/status/1653975563151851521" target="_blank"><img src="img/twitter.png" /></a>
     </div>
 </body>
 </html>
