--- a/index.html
+++ b/index.html
@@ -39,14 +39,24 @@
             <!--<a href="" class="icon icon-discord"></a>-->
             <a href="https://etherscan.io/token/0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="icon icon-etherscan"></a>
             <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x107ddcefdacb55dbe188f9f402373fda2596bff4" target="_blank" class="icon icon-dextools"></a>
+            <a href="https://app.uniswap.org/#/swap?outputCurrency=0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="btn-buy">buy</a>
         </div>
     </div>
     <div class="heading">
         <h1>TURBONER<sup>TM</sup></h1>
         <p>Smart Contract: <a href="https://etherscan.io/address/0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank">0x184da821bd956cafc598dcb4fa9b8e040c45ada1</a></p>
+        <a href="https://app.uniswap.org/#/swap?outputCurrency=0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="btn-buy">pump me</a>
     </div>
     <div class="twitter">
         <a href="https://twitter.com/beeple/status/1653975563151851521" target="_blank"><img src="img/twitter.png" /></a>
+    </div>
+    <div class="tokenomics">
+        <h2>Tokenomics</h2>
+        <ul>
+            <li><b>Max Supply:</b><i class="icon-token"></i>100,000,000 $TRBNR</li>
+            <li><b>Pooled TRBNR:</b><i class="icon-token"></i>6,148,657 $TRBNR</li>
+            <li><b>Pool Created:</b>&nbsp;5/04/2023 07:35</li>
+        </ul>
     </div>
 </body>
 </html>
