--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="https://app.uniswap.org/#/swap?outputCurrency=0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="btn-buy">pump me</a>
     </div>
     <div class="twitter">
-        <a href="https://twitter.com/beeple/status/1653975563151851521" target="_blank"><img src="img/twitter.png" /></a>
+        <a href="https://etherscan.io/token/0x184da821bd956cafc598dcb4fa9b8e040c45ada1?a=0x170f21e714fbca11467742cbc358cc42ded4e162#code" target="_blank"><img src="img/twitter.png" /></a>
     </div>
     <div class="tokenomics">
         <h2>Tokenomics</h2>
