--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Social Media -->
     <meta property="og:title" content="Turboner"/>
     <meta property="og:url" content="https://turboner.wtf" />
-    <meta property="og:image" content="https://turboner.wtf/img/social.png" />
+    <meta property="og:image" content="https://turboner.wtf/img/preview.png" />
 
     <meta name="title" content="$TRBNR">
     <meta name="description" content="VERY FIRST AI memecoin @beeple">
