--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
             <li><b>Pool Created:</b>&nbsp;5/04/2023 07:35</li>
         </ul>
     </div>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B24WCF56R3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-B24WCF56R3');
+    </script>
 </body>
 </html>
