--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta name="theme-color" content="#FFF"/>
 </head>
 <body>
+    <div class="rocket"></div>
     <div class="nav">
         <div class="name"><i class="logo"></i>$TRBNR</div>
         <div class="socials">
@@ -53,10 +54,23 @@
     <div class="tokenomics">
         <h2>Tokenomics</h2>
         <ul>
-            <li><b>Max Supply:</b><i class="icon-token"></i>100,000,000 $TRBNR</li>
-            <li><b>Pooled TRBNR:</b><i class="icon-token"></i>6,148,657 $TRBNR</li>
-            <li><b>Pool Created:</b>&nbsp;5/04/2023 07:35</li>
+            <li>Max Supply:<i class="icon-token"></i><b>100,000,000 $TRBNR</b></li>
+            <li>Pooled TRBNR:<i class="icon-token"></i><b>6,148,657 $TRBNR</b></li>
+            <li>Pool Created:&nbsp;<b>5/04/2023 07:35</b></li>
         </ul>
+    </div>
+    <div class="funding">
+        <h3>Supported by community</h3>
+        <p>As TURBONER™ is currently a community-driven project, your donation can have a significant impact on our marketing and some development efforts. Help us achieve our goals and experience substantial $TRBNR growth as soon as possible.</p>
+        <div class="donation-btn">
+            <script>
+                var JMPAY_DONATION_WALLET_EVM = '0x228b5006Eeb8a62C3c79932ac94ccfcB0F233e75';
+                var JMPAY_DONATION_WALLET_TRON = 'TYrsvG7tMadqnE7DizXRY5UVUxtHJ2Yi9r';
+                var JMPAY_DONATION_BUTTONCOLOR = '#FD8E28';
+                var JMPAY_DONATION_TEXTCOLOR = '#FFF';
+            </script>
+            <script src="https://pay.just.money/assets/js/donateButton_1.0.js"></script>
+        </div>
     </div>
 
     <!-- Google tag (gtag.js) -->
