--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             </script>
             <script src="https://pay.just.money/assets/js/donateButton_1.0.js"></script>
         </div>
+        <ul>
+            <li>EVM: 0x228b5006Eeb8a62C3c79932ac94ccfcB0F233e75</li>
+            <li>TRON: TYrsvG7tMadqnE7DizXRY5UVUxtHJ2Yi9r</li>
+        </ul>
     </div>
 
     <!-- Google tag (gtag.js) -->
