--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
     <div class="tokenomics">
         <h2>Tokenomics</h2>
         <ul>
-            <li>Max Supply:<i class="icon-token"></i><b>100,000,000 $TRBNR</b></li>
-            <li>Pooled TRBNR:<i class="icon-token"></i><b>6,148,657 $TRBNR</b></li>
-            <li>Pool Created:&nbsp;<b>5/04/2023 07:35</b></li>
+            <li>Max. Supply: 100 000 000</li>
+            <li>Circulating Supply: 100 000 000</li>
+            <li>0% Team / 0% Tax</li>
+            <li>100% Tokens were added to initial pool</li>
         </ul>
     </div>
     <div class="funding">
