--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     <div class="nav">
         <div class="name"><i class="logo"></i>$TRBNR</div>
         <div class="socials">
+            <!--
             <a href="https://twitter.com/turboner_erc20" target="_blank" class="icon icon-twitter"></a>
             <a href="https://t.me/trbnrcommunity" target="_blank" class="icon icon-telegram"></a>
-            <!--<a href="" class="icon icon-discord"></a>-->
+            <a href="" class="icon icon-discord"></a>-->
             <a href="https://etherscan.io/token/0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="icon icon-etherscan"></a>
             <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x107ddcefdacb55dbe188f9f402373fda2596bff4" target="_blank" class="icon icon-dextools"></a>
             <a href="https://app.uniswap.org/#/swap?outputCurrency=0x184da821bd956cafc598dcb4fa9b8e040c45ada1" target="_blank" class="btn-buy">buy</a>
